--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
    <!--  <input type="file" id="source">   
    <button id="display_btn">顯示</button><br>
     -->
+   
+  <div class="container"> 
+    <img src="../images/log1.png" alt="Logo" width="100" height="100"> 
+    <div>Hanger股票投資系統</div> 
+  </div>
 
-   <div>Hanger股票投資系統</div>
+
    <div>
-    <span>股票名 稱</span>
+    <span>股票名稱</span>
     <input type="text" id="stockName" name="stockName">   
     <span>股票代號</span>
     <input type="text" id="stockNo" name="stockNo">   
@@ -48,13 +53,8 @@
    <div id="findStock"></div> 
 
    <table id="stockTable">
-    <thead>
-      <tr>
-        <th>股票代號</th>
-        <th>股票名稱</th>
-        <th>交易日期</th>
-        <th>交易價格</th>
-        <th>交易股數</th>
+   <thead>
+      <tr>        
       </tr>
     </thead>
     <tbody>
