改變index.html 交易股數

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <input type="text" id="transDate" name="transDate">   
     <span>成交價</span>
     <input type="text" id="transAmount" name="transAmount">
-    <span>股數</span>
+    <span>交易股數</span>
     <input type="text" id="stockNum" name="stockNum">
     <br>
    </div>
