--- a/test.html
+++ b/test.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dynamic Checkbox in Table</title>
+  <title>Read Text File and Display as JSON</title>
 </head>
 <body>
 
-<table id="stockTable">
-  <thead>
-    <tr>
-      <th>Select</th>
-      <th>Name</th>
-      <th>Age</th>
-    </tr>
-  </thead>
-  <tbody>                             
-    <tr id="tbdd">        
-    </tr>
-  </tbody>
-</table>
+<link rel="text" type="text" href="../data/TWSE.txt" id="textFileLink">
 
-<button onclick="addCheckbox()">Add Checkbox</button>
+<button onclick="readTextFile()">Read Text File</button>
 
 <script>
-  function addCheckbox() {
-    var tbody = document.getElementById("stockTable").getElementsByTagName('tbody')[0];
-    var newRow = tbody.insertRow();
+  
+  function readTextFile() {    
+    var linkElement = document.getElementById('textFileLink');
+    var filePath = linkElement.getAttribute('href');
 
-    var checkboxCell = newRow.insertCell(0);
-    var nameCell = newRow.insertCell(1);
-    var ageCell = newRow.insertCell(2);
-
-    var checkbox = document.createElement("input");
-    checkbox.type = "checkbox";
-    checkbox.name = "checkbox" + (tbody.rows.length);
-
-    var label = document.createElement("label");
-    label.appendChild(checkbox);
-    label.appendChild(document.createTextNode("Option " + (tbody.rows.length)));
-
-    checkboxCell.appendChild(label);
-    nameCell.textContent = "New Name";
-    ageCell.textContent = "New Age";
+    fetch(filePath)
+      .then(response => response.text())
+      .then(data => {
+        // Convert the text data to JSON format
+        //var data1 = JSON.parse(data);
+        data = data.split('\n');        
+        var splitDataArray = data.map(function(item) { 
+          //console.log( item.split(/\s+/)); 
+          var list=item.split(/\s+/);
+          //console.log(list);
+          if(list[0]=='3481') console.log(list[1]);
+        });                   
+      })      
+      .catch(error => {
+        console.error("Error reading file:", error);
+      });            
   }
+
+
 </script>
 
 </body>
