[feat] Update css style
* Make it prettier
* Adding Animation (fadeIn, slideUp)
* media detector

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <table>    
     <thead id="stockTable">
-      <th>                                  
+      <th colspan="7">                                  
       </th>
     </thead>        
     <tbody id="stockTbody">                                         
